--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,5 @@
 {
-  "apiEndpoint": "http://localhost:8090/api",
+  "apiEndpoint": "http://172.20.10.5:8090/api",
   "storageKey": "auth",
   "darkTheme": {
     "name": "dark",
